--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,11 +25,6 @@ body {
     height: 80vh;
     width: 80vw;
     padding: 20px;
-    background-color: var(--slate);
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    display: grid;
-    place-items: center;
 }
 
 .sigCard {
@@ -49,16 +44,31 @@ body {
     width: 500px;
     padding: 10px;
     display: none;
+    position: relative;
+}
+
+#copyButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 input[type=text] {
+    width: 100%;
     margin: 2px;
+    max-width: 200px;
 }
 
 input[type=button] {
     margin-bottom: 10px;
 }
 
-#privacyText {
+select {
+    font-family: inherit;
     font-size: 12px;
-}
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    max-width: 200px;
+  }
